--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-CORS==3.0.10
 Spacy==3.4.1
 thinc==8.1.0
 NetworkX==2.8.7
+Werkzeug==1.0.1
 gunicorn==20.1.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.1/en_core_web_sm-3.4.1.tar.gz
 
