--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ NetworkX==2.8.7
 Werkzeug==2.3.3
 gunicorn==20.1.0
 transformers[tokenizers,pytorch]==4.29.2
-torch==1.11.0+cpu
-torchvision==0.12.0+cpu
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+torch==2.0.1
+--find-links https://download.pytorch.org/whl/cpu/torch_stable.html
+torchvision==0.15.2
